--- a/jenkinsfile
+++ b/jenkinsfile
@@ -28,5 +28,11 @@ pipeline
                 echo "This is the fourth stage"
             }
         }
+        
+        stage('Production'){
+            steps{
+                echo "This is the fifth stage"
+            }
+        }
     }
 }
