--- a/jenkinsfile
+++ b/jenkinsfile
@@ -29,6 +29,12 @@ pipeline
             }
         }
         
+        
+        stage('Staging'){
+            steps{
+                echo "This is the fifth stage"
+            }
+        
         stage('Production'){
             steps{
                 echo "This is the fifth stage"
